...
          />
        ) : null}
        {onDelete ? (
          <BottomDrawerItem
            icon="trashOutline"
            label={t('drive.fileMeta.delete')}
            testID="action-delete"
            disabled={!isOnline}
            onPress={() => drawer.run(() => onDelete(folder))}
          />
        ) : null}
        {onMove ? (
          <BottomDrawerItem
...
